Votingapp-Deployment/votingapp-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-deploy
  labels:
    name: voting-app-deploy
    app: demo-voting-app
spec:
  template:
    metadata:
      name: voting-app-pod
      labels:
        name: voting-app-pod
        app: demo-voting-app
    spec:
      containers:
        - name: voting-app
          image: kabilanmani/votecode:5
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /vote/
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 1  
  selector:
    matchLabels:
      name: voting-app-pod
      app: demo-voting-app
  replicas: 1
