Votingapp-Deployment/Knote-ingressresource.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: votingapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target:  /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: 35.222.22.152.xip.io
    http:
      paths:
        - path: /
          backend:
            serviceName: knote
            servicePort: 80
