Votingapp-Deployment/ingress-resource.yml
#https://github.com/kubernetes/ingress-nginx/blob/faf80ad89a1e49113cc9791f0137e2f5a542487a/controllers/nginx/configuration.md#rewrite
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /result/
            backend:
              serviceName: result-service
              servicePort: 80
          - path: /vote/
            backend:
              serviceName: voting-service
              servicePort: 80
